# hub75_yuki

./: .gitignore  README.md
.github/workflows/: deploy-web-app.yml  deploy-web.yml
application/: .gitignore  README.md  pyproject.toml  requirements.txt
application/src/led_matrix_controller/: __init__.py  controller.py  main.py
application/src/led_matrix_controller/devices/: __init__.py  base.py  serial_device.py  simulator.py
docs/: index.html
docs/assets/: index-3BfuZC1K.js  index-B32xZiSN.js  index-B9dqtEX0.js  index-BOTj3ghf.js  index-CNnOMaIQ.js  index-CqSNFbdw.css
firmware/: .gitignore  README.md  platformio.ini
firmware/host/: hub75_sender.py
firmware/include/: hub75.pio.h  hub75_config.h  tusb_config.h
firmware/src/: main.cpp
web_application/: README.md  index.html  package-lock.json  package.json
web_application/src/: App.tsx
web_application/src/components/: DemoSelector.tsx  DropZone.tsx
web_application/src/lib/: cobs.ts  demos.ts  media.ts  serial.ts  videoProcessor.ts
web_application/src/types/: index.ts
